# scrapyard

./: .gitignore  AGENTS.md  Cargo.toml  GAME_BALANCE.md  README.md  code_review.md  config.json  game_design_document.md  generate_sounds.py  implementation_plan.md  index.html  publish.ps1  ui_spec.md
assets/: art_prompts.json  enemies.json  modules.json  tutorial.json  upgrades.json
assets/ships/: starter_ship.json
assets/stats/: weapons.json
plans/: improvement_01_reorganize_modules.md  improvement_02_fix_power_system.md  improvement_03_replace_unsafe_statics.md  improvement_04_split_large_files.md  improvement_05_extract_constants.md  improvement_06_error_handling.md  improvement_07_wasm_compatibility.md  improvement_08_performance_optimization.md  improvement_09_tutorial_data_driven.md  improvement_10_complete_save_load.md  plan_architect.md  plan_construct.md  plan_mechanic.md  plan_observer.md
src/: ai.rs  assets.rs  combat.rs  constants.rs  entities.rs  events.rs  gameplay.rs  input.rs  interior.rs  layout.rs  main.rs  player.rs  render.rs  resources.rs  settings.rs  ship.rs  state.rs
src/data/: settings.rs
src/economy/: mod.rs  resources.rs  upgrades.rs
src/enemy/: ai.rs  combat.rs  entities.rs  mod.rs  wave.rs
src/ship/: interior.rs  layout.rs  mod.rs  player.rs  ship.rs
src/simulation/: constants.rs  events.rs  gameplay.rs  mod.rs
src/state/: game_actions.rs  game_persistence.rs  game_state.rs  game_update.rs  mod.rs  persistence.rs  profile.rs  tutorial.rs
src/ui/: assets.rs  gameplay_input.rs  input_manager.rs  mod.rs  pause_menu.rs  (+5 more)
(+2 files in other folders)
