[package]
name = "scrapyard"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
macroquad-toolkit = { path = "../macroquad-toolkit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
getrandom = { version = "0.2", features = ["js"] }  # Required for WASM builds
